--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path_provider: ^2.0.11
   provider: ^6.0.3
   http: ^0.13.5
+  font_awesome_flutter: ^10.2.1
 
 dev_dependencies:
   flutter_test:
