--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.0.3
   http: ^0.13.5
   font_awesome_flutter: ^10.2.1
+  url_launcher: ^6.1.6
 
 dev_dependencies:
   flutter_test:
