Starting Movie Details Screen

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,5 +30,8 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDVIIxwmezs-AFQ4UQJRX98OH8TBwAZIHM"/>
     </application>
 </manifest>
+
