--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   http: ^0.13.5
   font_awesome_flutter: ^10.2.1
   url_launcher: ^6.1.6
+  image_picker: ^0.8.6
 
 dev_dependencies:
   flutter_test:
