--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   image_picker: ^0.8.6
   smooth_page_indicator: ^1.0.0+2
   google_maps_flutter: ^2.2.1
+  modal_bottom_sheet: ^2.0.0
 
 dev_dependencies:
   flutter_test:
